--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,3 +12,4 @@ jobs:
     - run: sudo python3.7 -m pip install pipenv
     - run: pipenv install --dev
     - run: make test
+    - run: make lint
